bugfix: nav fell behind other absolutely positioned elements

--- a/app/assets/style/app.scss
+++ b/app/assets/style/app.scss
@@ -113,6 +113,7 @@ h6 {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .pure-menu-item {
